// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test svg-editor should render correctly in mac 1`] = `
<div>
  <div>
    <div
      class="mac"
      id="svg_editor"
    >
      <div>
        <div>
          This is dummy Ruler
        </div>
        <div>
          This is dummy Workarea
        </div>
        <div
          id="tool_import"
          style="display: none;"
        />
        <input
          id="text"
          size="35"
          type="text"
        />
        <div
          id="cur_context_panel"
        />
        <div
          class="dropdown"
          id="option_lists"
        />
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        class="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
  </div>
  <div>
    MockZoomBlock
  </div>
  <div>
    MockDpiInfo
  </div>
</div>
`;

exports[`test svg-editor should render correctly in win 1`] = `
<div>
  <div>
    <div
      class=""
      id="svg_editor"
    >
      <div>
        <div>
          This is dummy Ruler
        </div>
        <div>
          This is dummy Workarea
        </div>
        <div
          id="tool_import"
          style="display: none;"
        />
        <input
          id="text"
          size="35"
          type="text"
        />
        <div
          id="cur_context_panel"
        />
        <div
          class="dropdown"
          id="option_lists"
        />
      </div>
    </div>
    <div
      id="dialog_box"
    >
      <div
        class="overlay"
      />
      <div
        id="dialog_container"
      >
        <div
          id="dialog_content"
        />
        <div
          id="dialog_buttons"
        />
      </div>
    </div>
  </div>
  <div>
    MockZoomBlock
  </div>
  <div>
    MockDpiInfo
  </div>
</div>
`;
